--- a/ASSIGNMENT/Detail1.html
+++ b/ASSIGNMENT/Detail1.html
@@ -18,6 +18,22 @@
     />
 
     <style>
+      .navbar-custom,
+      footer {
+        background: linear-gradient(90deg, #ffffff, #b2b2ec);
+      }
+
+      .navbar-custom .nav-link {
+        font-weight: 500;
+        margin-right: 6px;
+        padding: 6px 12px;
+        transition: all 0.3s ease;
+      }
+
+      .navbar-custom .nav-link:hover,
+      .navbar-custom .nav-link.active {
+        background-color: rgba(255, 255, 255, 0.2);
+      }
       .blog-aside-img {
         width: 80px;
         height: 80px;
@@ -40,13 +56,13 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img
-            src="images/logo-energy-pilates.png"
+            src="images/DotBlog_domain_logo.png"
             alt="Logo"
-            style="width: 150px"
+            style="width: 130px"
           />
         </a>
 
@@ -62,37 +78,43 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">
+              <a class="nav-link text-dark" href="index.html">
                 <i class="fa-solid fa-house"></i>Trang chủ
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Post.html">
+              <a class="nav-link text-dark" href="Post.html">
                 <i class="fa-solid fa-list"></i> Bài viết
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link text-dark" href="Post.html">
                 <i class="fa-solid fa-film"></i> Video
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link text-dark" href="#">
                 <i class="fa-solid fa-circle-info"></i> Giới thiệu
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link text-dark" href="Event.html">
                 <i class="fa-solid fa-calendar-days"></i> Sự kiện
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="CreatePost.html">
+                <i class="fa-solid fa-pen-to-square"></i> Đăng bài
               </a>
             </li>
 
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle text-dark"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -101,19 +123,13 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a
-                    class="dropdown-item"
-                    data-bs-toggle="modal"
-                    data-bs-target="#loginModal"
-                    >Đăng nhập</a
+                  <a class="dropdown-item" href="Login.html"
+                    ><i class="fa-solid fa-right-to-bracket"></i>Đăng nhập</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    data-bs-toggle="modal"
-                    data-bs-target="#registerModal"
-                    >Đăng ký thành viên</a
+                  <a class="dropdown-item" href="Register.html"
+                    ><i class="fa-brands fa-github"></i>Đăng ký thành viên</a
                   >
                 </li>
                 <li>
@@ -121,7 +137,13 @@
                     class="dropdown-item"
                     data-bs-toggle="modal"
                     data-bs-target="#forgotPasswordModal"
-                    >Quên mật khẩu</a
+                    ><i class="fa-solid fa-unlock"></i>Quên mật khẩu</a
+                  >
+                </li>
+
+                <li>
+                  <a class="dropdown-item" href="Profile.html"
+                    ><i class="fa-solid fa-address-card"></i>Thôn tin cá nhân</a
                   >
                 </li>
               </ul>
@@ -130,10 +152,10 @@
 
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Tiếng Việt</a>
+              <a class="nav-link text-dark" href="#">Tiếng Việt</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tiếng Anh</a>
+              <a class="nav-link text-dark" href="#">Tiếng Anh</a>
             </li>
           </ul>
         </div>
@@ -375,214 +397,6 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="loginModal">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-            ></button>
-          </div>
-          <form class="p-3 was-validated">
-            <div class="row justify-content-center">
-              <div class="col-md-6">
-                <br />
-                <h3 class="text-danger text-center fw-bold">Đăng nhập</h3>
-                <br />
-                <div class="card p-4">
-                  <div class="mb-3">
-                    <label class="form-label">Email</label>
-                    <input
-                      type="email"
-                      class="form-control"
-                      placeholder="Nhập Email"
-                      required
-                    />
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback">Vui lòng nhập Email!</div>
-                  </div>
-
-                  <div class="mb-3">
-                    <label class="form-label">Mật khẩu</label>
-                    <input
-                      type="password"
-                      class="form-control"
-                      placeholder="Nhập mật khẩu"
-                      required
-                    />
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback">Vui lòng nhập mật khẩu!</div>
-                  </div>
-
-                  <div>
-                    <button type="submit" class="btn btn-primary w-100">
-                      Đăng nhập
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal fade" id="registerModal">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-            ></button>
-          </div>
-          <form class="p-3 was-validated">
-            <div class="row">
-              <div class="col-12">
-                <br />
-                <h3 class="text-danger text-center fw-bold">
-                  Thông tin cá nhân
-                </h3>
-                <br />
-                <div class="card p-4">
-                  <div class="mb-3">
-                    <label class="form-label">Họ và tên</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Nhập họ và tên"
-                      required
-                    />
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback">Vui lòng nhập họ và tên!</div>
-                  </div>
-
-                  <div class="mb-3">
-                    <label class="form-label">Email</label>
-                    <input
-                      type="email"
-                      class="form-control"
-                      placeholder="Nhập email"
-                      required
-                    />
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback">Vui lòng nhập Email!</div>
-                  </div>
-
-                  <div class="mb-3">
-                    <label class="form-label">Số điện thoại</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Nhập số điện thoại"
-                      pattern="[0-9]{10}"
-                      required
-                    />
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback">
-                      Số điện thoại phải gồm đúng 10 chữ số!
-                    </div>
-                  </div>
-
-                  <div class="mb-3">
-                    <label class="form-label">Mật khẩu</label>
-                    <input
-                      type="password"
-                      class="form-control"
-                      placeholder="Nhập mật khẩu"
-                      required
-                    />
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback">Vui lòng nhập mật khẩu!</div>
-                  </div>
-
-                  <div class="mb-3">
-                    <label class="form-label">Xác nhận mật khẩu</label>
-                    <input
-                      type="password"
-                      class="form-control"
-                      placeholder="Nhập xác nhận mật khẩu"
-                      required
-                    />
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback">
-                      Vui lòng nhập xác nhận mật khẩu!
-                    </div>
-                  </div>
-
-                  <div class="mb-3">
-                    <label class="form-label">Giới tính</label>
-                    <div class="form-check form-check-inline">
-                      <input
-                        type="radio"
-                        name="gender"
-                        class="form-check-input"
-                        required
-                      />
-                      <label class="form-check-label">Nam</label>
-                    </div>
-
-                    <div class="form-check form-check-inline">
-                      <input
-                        type="radio"
-                        name="gender"
-                        class="form-check-input"
-                      />
-                      <label class="form-check-label">Nữ</label>
-                    </div>
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback d-block">
-                      Vui lòng chọn giới tính!
-                    </div>
-                  </div>
-
-                  <div class="mb-3">
-                    <label class="form-label">Ngôn ngữ</label>
-                    <select class="form-select" required>
-                      <option value="" selected disabled>Chọn ngôn ngữ</option>
-                      <option>Tiếng Việt</option>
-                      <option>Tiếng Anh</option>
-                      <option>Tiếng Trung</option>
-                      <option>Tiếng Nhật</option>
-                      <option>Tiếng Hàn</option>
-                      <option>Tiếng Lào</option>
-                      <option>Tiếng Thái Lan</option>
-                    </select>
-
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback">Vui lòng chọn ngôn ngữ!</div>
-                  </div>
-
-                  <div class="mb-3">
-                    <div class="form-check">
-                      <input
-                        type="checkbox"
-                        class="form-check-input"
-                        required
-                      />
-                      <label class="form-check-label"
-                        >Tôi đồng ý với các điều khoản và điều kiện.</label
-                      >
-                    </div>
-                    <div class="valid-feedback">Hợp lệ</div>
-                    <div class="invalid-feedback">Vui lòng đồng ý!</div>
-                  </div>
-
-                  <div>
-                    <button type="submit" class="btn btn-primary w-100">
-                      Đăng kí
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
 
     <div class="modal fade" id="forgotPasswordModal">
       <div class="modal-dialog">
@@ -613,8 +427,10 @@
       </div>
     </div>
 
-    <footer class="bg-dark text-white mt-4 p-4">
-      <p class="text-center mb-0">Nâng cao sức khỏe – Cân bằng cuộc sống</p>
+    <footer class="mt-4 p-4">
+      <p class="text-center mb-0 text-dark">
+        Nâng cao sức khỏe – Cân bằng cuộc sống
+      </p>
     </footer>
   </body>
 </html>
